--- a/index.html
+++ b/index.html
@@ -160,10 +160,39 @@
                 </div>
             </div>
             
-            <div id="headmaster-dashboard" class="module-section"><h2>Headmaster Dashboard</h2><p>Development starting soon...</p></div>
+            <div id="headmaster-dashboard" class="module-section">
+    <h2>Headmaster Dashboard: School Summary</h2>
+    <div class="summary-cards">
+        <div class="card">
+            <h3>Total Teachers</h3>
+            <p id="totalTeachers">Loading...</p>
+        </div>
+        <div class="card">
+            <h3>Attendance Days Logged</h3>
+            <p id="totalAttendanceDays">Loading...</p>
+        </div>
+        <div class="card">
+            <h3>Average Attendance Rate</h3>
+            <p id="avgAttendanceRate">Loading...</p>
         </div>
     </div>
+
+    <h3 style="margin-top: 30px;">Recent Grades Entered</h3>
+    <table id="recentGradesTable">
+        <thead>
+            <tr>
+                <th>Test/Assignment</th>
+                <th>Class</th>
+                <th>Students Marked</th>
+                <th>Entered By</th>
+            </tr>
+        </thead>
+        <tbody id="recentGradesBody">
+            </tbody>
+    </table>
+</div>
     
     <script src="app.js"></script>
 </body>
 </html>
+
