--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="auth-section" class="login-container">
         <div class="login-box">
             <h2>ScholarLink Login</h2>
-            <div id="auth-status" class="status-message">Please log in or register.</div>
+            <div id="auth-status" class="status-message">Please log in. (Registration is disabled)</div>
             <div class="form-group">
                 <label for="loginEmail">Email</label>
                 <input type="email" id="loginEmail" placeholder="Enter your email" required>
@@ -21,8 +21,7 @@
                 <input type="password" id="loginPassword" placeholder="Enter your password" required>
             </div>
             <button id="loginBtn" class="btn btn-primary">Log In</button>
-            <button id="registerBtn" class="btn btn-secondary">Register</button>
-        </div>
+            </div>
     </div>
 
     <div id="app-section" class="app-layout hidden">
