--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                     
                     <div class="card p-3 mb-4">
                         <h4 class="card-title">Register New Student</h4>
+                        <div id="studentRegStatus" class="status-message hidden alert alert-success mb-3"></div>
                         <div class="row g-3 align-items-end">
                             <div class="col-md-5">
                                 <label for="newStudentName" class="form-label">Student Name</label>
@@ -293,3 +294,4 @@
     
 </body>
 </html>
+
