--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <nav class="sidebar">
                 <button class="tab-btn active" data-module="attendance">Attendance</button>
                 <button class="tab-btn" data-module="grade">Gradebook</button>
-                <button class="tab-btn" data-module="student-management">👨‍🎓 Student Management</button> 
+                <button class="tab-btn" data-module="student-management">Student Management</button> 
                 <button class="tab-btn" data-module="parent-portal">Parent Portal</button>
                 <button class="tab-btn" data-module="headmaster-dashboard">Dashboard</button>
             </nav>
@@ -140,7 +140,7 @@
                 </section>
 
                 <section id="student-management" class="module-section">
-                    <h2>👨‍🎓 Student Registration & Class List</h2>
+                    <h2>Student Registration & Class List</h2>
                     
                     <div class="card p-3 mb-4">
                         <h4 class="card-title">Register New Student</h4>
@@ -286,7 +286,7 @@
         </div>
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 
@@ -294,5 +294,6 @@
     
 </body>
 </html>
+
 
 
